--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
-    "json-server": "^1.0.0-beta.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
+    "json-server": "^1.0.0-beta.3",
+    "sass": "^1.86.3",
     "ts-jest": "^29.1.2",
     "ts-node": "10.9.2",
     "typescript": "~5.7.2",
