--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "29.7.0",
     "jest-environment-jsdom": "29.7.0",
-    "json-server": "^1.0.0-beta.3",
+    "json-server": "0.17.4",
     "sass": "^1.86.3",
     "ts-jest": "^29.1.2",
     "ts-node": "10.9.2",
